--- a/config/config.yaml
+++ b/config/config.yaml
@@ -29,5 +29,5 @@ aggregation:
 
 export_settings:
   output_dir_path: /adois/output
-  prefix: recklinghausen
+  prefix: output_name
   export_raw_shape_file: true
